# sc

./: .gitignore  AGENTS.md  LICENSE  README.md  build.ps1  build.sh  cheatsheet.md  compiler-defaults.md  compiler.md  cross-compile.md  debugging.md  prompt.md  spec.md  stdc  syntax  syntax-g.md  syntax-s-design.md  syntax-s.md  syntax.md  troubleshooting.md
.github/workflows/: wsi-windows.yml
builtins/: MECHANISM.md  REFERENCE.md  ROADMAP.md  adt.sc  auto_ptr.md  class.md  io.sc  mt.md  op.h  op.sc  op_impl.c  platform.h  tok.md  ts.md
builtins/adt/: adt.h  adt.sc  adt_impl.c
builtins/async/: async.h  async.sc  async_impl.c
builtins/codec/: codec.h  codec.sc  codec_impl.c
builtins/crypto/: crypto.h  crypto.sc  crypto_impl.c
builtins/env/: args.h  env.h  env.sc  env_impl.c
builtins/gfx/: .sc  README.md  build.sh  gfx.sc
builtins/gpu/: .sc  MECHANISM.md  README.md  build.sh  gpu.h  gpu.sc  gpu_d3d.h  gpu_vk.h  vk_loader.h
builtins/graph/: graph.h  graph.sc  graph_impl.c
builtins/io/: io.h  io.sc  io_impl.c
builtins/m/: m.h  m.sc  m_impl.c
builtins/mem/: mem.h  mem.sc  mem_impl.c
builtins/mt/: mt.h  mt.sc  mt_impl.c  mt_p.h
builtins/neuron/: neuron.sc
builtins/nn/: nn.h  nn.sc  nn_impl.c
builtins/os/: os.h  os.sc  os_impl.c
builtins/proto/: proto.h  proto.sc  proto_impl.c
builtins/spc/: .sc  PORTING.md  README.md  build.sh  spc.h  spc.sc
builtins/ssl/: ssl.h  ssl.sc  ssl_impl.c
builtins/sys/: sys.h  sys.sc  sys_impl.c
builtins/tok/: graph.h  graph_impl.c  tok.h  tok.sc  tok_impl.c
builtins/ts/: .sc  ROADMAP.md  ts.h  ts.sc  ts_impl.c
compiler/: CMakeLists.txt
compiler/cmake/: embed_builtins.cmake
compiler/src/: ast.h  ast_json.cpp  ast_json.h  ast_print.cpp  ast_print.h  cheaders.cpp  cheaders.h  codegen_c.cpp  codegen_c.h  codegen_cpu.cpp  codegen_cpu.h  codegen_glsl.cpp  codegen_glsl.h  codegen_sc.cpp  codegen_sc.h  codegen_spirv.cpp  codegen_spirv.h  error.h  host_compat.cpp  host_compat.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  proggraph.cpp  proggraph.h  proggraph_viewer.inc  remote.cpp  remote.h  semantic.cpp  semantic.h  shader_ast.h  shader_caps.h  shader_msl.cpp  shader_msl.h  shader_sema.cpp  shader_sema.h  shader_spec.cpp  shader_spec.h  (+2 more)
examples/: README.md  cbridge_demo.sc  demo.c  demo.sc  feature1.sc  feature10.sc  feature11.sc  feature12.sc  feature13.sc  feature14.sc  feature15.sc  feature16.sc  feature17.sc  feature18.sc  feature19.sc  feature2.sc  feature20.sc  feature21.sc  feature22.sc  feature23.sc  feature24.sc  feature25.sc  feature26.sc  feature27.sc  feature28.sc  feature29.sc  feature3.sc  feature31.sc  feature32.sc  feature33.sc  feature34.sc  feature34_cmac.h  feature35.sc  feature36.sc  feature37.sc  feature38.sc  feature39.sc  feature4.sc  feature40.sc  feature41.sc  (+29 more)
examples/feature30/: feature30.sc  feature30_mod.sc
examples/feature38/: feature38.sc  gvec.sc
examples/feature46/: feature46.sc  feature46_config.sc  feature46_logger.sc
examples/shader-tri/: README.md  build.sh  main.c  run.sh  tri.sg  tri.ss
examples/shader-tri-metal/: README.md  build.sh
examples/targets/: aarch64-linux.target  cortex-m4.target  remote-linux.target  windows-x64.target
proggraph/: PROGRESS.md  README.md
proggraph/docs/: design.md  requirements.md  roadmap.md
sagent/: .gitignore  OUTLINE.md  PLAN.md  build.sh  sagent.sc
sagent/scripts/: coding.sh
sagent/src/: .sc  config.sc  http.sc  http_curl.c  http_sh.sc  json.sc  keys.sc  llm.sc  loop.sc  repo.sc  sagent_dir.sc  util.sc
templates/: README.md
templates/app/: README.md
templates/demo/: gpu_demo.sc  gpu_headless_demo.sc  path_stack_demo.sc  sec_demo.sc  spc_demo.sc  spc_p2_demo.sc  spc_p3_demo.sc  ssh_demo.sc  ui_demo.sc  win_gfx_demo.sc  ws_echo.sc  wsi_demo.sc  wsi_demo_ci.sc
templates/dnn-design/: README.md
templates/dnn-framework/: README.md  dnn.sc
templates/plib/: README.md  build.sh  hello_demo.sc  plib.h  plib.sc  plib_darwin.m  plib_linux.c  plib_win.c
templates/push-reactive/: README.md
templates/targets/: aarch64-linux.target  android-pkg.sh  android-run.sh  android.target  ar-iossim.sh  cc-android.sh  cortex-m4.target  ios-sim.target  remote-linux.target  windows-x64-mingw.target  windows-x64.target
templates/utils/: MECHANISM.md  build_libssh2.sh  codec.sc  path.sc  path_stack_test.sc  sec_demo.sc  securechan.sc  securechn.sc  ssh.sc  ssh_glue.c  ws.sc
templates/websocket/: echo.sc
templates/workflow-graph/: README.md  workflow.sc
templates/wsi/: CMakeLists.bak.txt  CMakeLists.txt  wsi.h
templates/wsi/src/: cocoa_window.m  glfw3native.h  input.c  internal.h  macos_time.c  monitor.c  null_init.c  null_platform.h  null_window.c  platform.c  platform.h  posix_poll.c  posix_poll.h  posix_thread.h  posix_time.c  win32_monitor.c  win32_platform.h  win32_thread.c  win32_thread.h  win32_window.c  wl_init.c  wl_window.c  x11_init.c  x11_platform.h  x11_window.c  xkb_unicode.c
tests/: README.md  bench_ts.sh  linux_wsl_validate.sh  numpy_parity_smoke.py  run.sh  run_linalg_dual_path.sh  win_remote_check.sh
tests/cases/: abi_fat_bad.sc  add_sc_helper.sc  add_sc_test.sc  arg_count_bad.sc  args_native.sc  array.sc  assign_lvalue_bad.sc  atom.sc  attn_train.sc  auto_ptr.sc  auto_ptr_drop_bad.sc  bad_op_bad.sc  bare_at.sc  bare_rpc_bad.sc  bmp_test.sc  bst_at.sc  case_exhaustive_bad.sc  cast.sc  cbridge.sc  chain_sort.sc  cnn_train.sc  codec_test.sc  cross_module_bad.sc  cross_module_dep_bad.sc  crypto_test.sc  dead_code_bad.sc  dep_cycle_bad.sc  dict_at.sc  div_zero_bad.sc  drop_idempotent.sc  dup_def_bad.sc  expr.sc  fat_array.sc  fat_array_bad.sc  fat_copy_bad.sc  fat_global.sc  final.sc  forin_adt.sc  goto_bad_cross.sc  goto_scope.sc  (+72 more)
tests/data/: gen_tiff_lzw.py
tests/golden/: abi_fat_bad.err  add_sc_test.tap  arg_count_bad.err  args_native.c  args_native.sc  array.c  array.sc  (+288 more)
vscode-ast/: extension.js  package.json
vscode-sc/: extension.js  language-configuration.json  package.json
vscode-sc-ast/: extension.js  package.json
vscode-sg/: extension.js  language-configuration.json  package.json
(+357 files in other folders)
